--- a/Client/src/app/modules/public/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/public/components/navigation/navigation.component.html
@@ -1,13 +1,26 @@
 <header class="bg-white">
-    <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
+    <nav class="mx-auto flex max-w-7xl items-center justify-between p-5 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1">
-            <a href="#" class="-m-1.5 p-1.5">
+            <a routerLink="/" class="-m-1.5 p-1.5">
                 <span class="sr-only">Your Company</span>
-                <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+                <img class="h-8 w-auto" src="{{logo}}" alt="logo">
             </a>
         </div>
-        <!-- Mobile toggler start-->
-        <div class="flex lg:hidden">
+        
+        <!-- Mobile togglers-->
+        <div class="flex justify-end lg:hidden">
+            <!-- Mini Shopping cart toggler-->
+            <button type="button"
+                class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700 mr-2"
+                (click)="showMiniCart = !showMiniCart">
+                <span class="sr-only">Open main menu</span>
+                <svg height="16" width="18" viewBox="0 0 576 512">
+                    <path fill="currentColor"
+                        d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                </svg>
+            </button>
+
+            <!-- Menu toggler-->
             <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
                 (click)="isToggle = !isToggle">
                 <span class="sr-only">Open main menu</span>
@@ -22,72 +35,98 @@
         <!-- Dropdown Menu -->
         <div class="hidden lg:flex lg:gap-x-12">
             @for(menu of menuList; track menu){
-                @if(menu.subMenu){
-                <div class="relative" (click)="toggleSubMenu(menu)">
-                    <button type="button" class="flex items-center gap-x-1 text-sm font-medium leading-6 text-gray-900"
-                        [attr.aria-expanded]="isToggle" (click)="isToggle = !isToggle">
-                        {{menu.title}}
-                        <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor"
-                            aria-hidden="true" [ngClass]="{'rotate-180': menu.isToggle, '': !menu.isToggle}">
-                            <path fill-rule="evenodd"
-                                d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </button>
-                    <div class="absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5"
-                        [@dropdownInOut]="isToggle ? 'in' : 'void'"
-                        [style]="isToggle ? 'display : block' : 'display: none'">
-                        <div class="p-4">
-                            @for(subMenu of menu.subMenu; track subMenu){
+            @if(menu.subMenu){
+            <div class="relative">
+                <button type="button" class="flex items-center gap-x-1 text-sm font-medium leading-6 text-gray-900"
+                    [attr.aria-expanded]="menu.isToggle" (click)="toggleSubMenu(menu)">
+                    {{menu.title}}
+                    <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor"
+                        aria-hidden="true" [ngClass]="{'rotate-180': menu.isToggle, '': !menu.isToggle}">
+                        <path fill-rule="evenodd"
+                            d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </button>
+                <div class="absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5"
+                    [@dropdownInOut]="menu.isToggle ? 'in' : 'void'"
+                    [style]="menu.isToggle ? 'display : block' : 'display: none'">
+                    <div class="p-4">
+                        @for(subMenu of menu.subMenu; track subMenu){
+                        <div
+                            class="group relative flex items-center gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-100">
                             <div
-                                class="group relative flex items-center gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-100">
-                                <div
-                                    class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+                                class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
 
-                                    <fa-icon [icon]="subMenu.icon"
-                                        class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"></fa-icon>
-                                </div>
-                                <div class="flex-auto">
-                                    <a routerLink={{subMenu.route}}
-                                        class="block font-mediumtext-gray-900 group-hover:text-indigo-600">
-                                        {{subMenu.title}}
-                                        <span class="absolute inset-0"></span>
-                                    </a>
-                                    <p class="mt-1 text-gray-600 group-hover:text-indigo-600">
-                                        {{subMenu.desc}}</p>
-                                </div>
+                                <fa-icon [icon]="subMenu.icon"
+                                    class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"></fa-icon>
                             </div>
-                            }
+                            <div class="flex-auto">
+                                <a routerLink={{subMenu.route}}
+                                    class="block font-mediumtext-gray-900 group-hover:text-indigo-600">
+                                    {{subMenu.title}}
+                                    <span class="absolute inset-0"></span>
+                                </a>
+                                <p class="mt-1 text-gray-600 group-hover:text-indigo-600">
+                                    {{subMenu.desc}}</p>
+                            </div>
                         </div>
+                        }
                     </div>
                 </div>
-                }
-                @else {
-                <a routerLink={{menu.route}}
-                    class="text-sm font-medium leading-6 text-gray-900 hover:text-indigo-600 transition-all ease-in-out duration-300">
-                    @if(menu.icon){
-                    <fa-icon [icon]="menu.icon"></fa-icon>
-                    }
-                    {{menu.title}}
-                </a>
-                }
-            }
-
-        </div>
-
-        <!-- Login/Logout button -->
-        <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-            @if((_accountService.currentUser$ | async)){
-            <a (click)="logout()"
-                class="text-sm font-mediumleading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 cursor-pointer hover:shadow-transparent">
-                <span aria-hidden="true">&larr;</span>
-                Log out
-            </a>
+            </div>
             }
             @else {
-            <a routerLink="/login"
-                class="text-sm font-mediumleading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:shadow-transparent">Log
-                in <span aria-hidden="true">&rarr;</span></a>
+            <a routerLink={{menu.route}}
+                class="text-sm font-medium leading-6 text-gray-900 hover:text-indigo-600 transition-all ease-in-out duration-300">
+                @if(menu.icon){
+                <fa-icon [icon]="menu.icon"></fa-icon>
+                }
+                {{menu.title}}
+            </a>
+            }
+            }
+        </div>
+
+        <!-- Right side Menu -->
+        <div class="hidden lg:flex lg:flex-1 lg:justify-end lg:items-center">
+
+            <!-- search form -->
+            <form class="mr-2 border rounded-md">
+                <div class="relative">
+                    <input type="text" placeholder="Search..."
+                        class="block w-full appearance-none bg-transparent py-2 pl-4 pr-12 text-base text-slate-900 placeholder:text-slate-600 focus:outline-none sm:text-sm sm:leading-6" />
+                    <svg class="pointer-events-none absolute right-2 top-2 h-6 w-6 fill-slate-400"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M20.47 21.53a.75.75 0 1 0 1.06-1.06l-1.06 1.06Zm-9.97-4.28a6.75 6.75 0 0 1-6.75-6.75h-1.5a8.25 8.25 0 0 0 8.25 8.25v-1.5ZM3.75 10.5a6.75 6.75 0 0 1 6.75-6.75v-1.5a8.25 8.25 0 0 0-8.25 8.25h1.5Zm6.75-6.75a6.75 6.75 0 0 1 6.75 6.75h1.5a8.25 8.25 0 0 0-8.25-8.25v1.5Zm11.03 16.72-5.196-5.197-1.061 1.06 5.197 5.197 1.06-1.06Zm-4.28-9.97c0 1.864-.755 3.55-1.977 4.773l1.06 1.06A8.226 8.226 0 0 0 18.75 10.5h-1.5Zm-1.977 4.773A6.727 6.727 0 0 1 10.5 17.25v1.5a8.226 8.226 0 0 0 5.834-2.416l-1.061-1.061Z">
+                        </path>
+                    </svg>
+                </div>
+            </form>
+
+            <!-- Mini shopping cart toggler -->
+            <button type="button"
+                class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700 mr-2"
+                (click)="showMiniCart = !showMiniCart">
+                <span class="sr-only">Open main menu</span>
+                <svg height="16" width="18" viewBox="0 0 576 512">
+                    <path fill="currentColor"
+                        d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                </svg>
+            </button>
+            
+            <!-- Login/Logout button -->
+            @if((_accountService.currentUser$ | async)){
+            <button (click)="logout()"
+                class="text-sm font-medium text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 cursor-pointer hover:shadow-transparent">
+                <span aria-hidden="true">&larr;</span>
+                Log out
+            </button>
+            }
+            @else {
+            <button routerLink="/login"
+                class="text-sm font-medium text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:shadow-transparent">Log
+                in <span aria-hidden="true">&rarr;</span></button>
             }
         </div>
     </nav>
@@ -101,8 +140,8 @@
             <div class="flex items-center justify-between">
                 <a href="#" class="-m-1.5 p-1.5">
                     <span class="sr-only">Your Company</span>
-                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-                        alt="">
+                    <img class="h-8 w-auto" src="{{logo}}"
+                        alt="logo">
                 </a>
                 <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" (click)="isToggle = !isToggle">
                     <span class="sr-only">Close menu</span>
@@ -112,6 +151,21 @@
                     </svg>
                 </button>
             </div>
+            
+            <!-- search form -->
+            <form class="border rounded-md mt-4">
+                <div class="relative">
+                    <input type="text" placeholder="Search..."
+                        class="block w-full appearance-none bg-transparent py-2 pl-4 pr-12 text-base text-slate-900 placeholder:text-slate-600 focus:outline-none sm:text-sm sm:leading-6" />
+                    <svg class="pointer-events-none absolute right-2 top-2 h-6 w-6 fill-slate-400"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M20.47 21.53a.75.75 0 1 0 1.06-1.06l-1.06 1.06Zm-9.97-4.28a6.75 6.75 0 0 1-6.75-6.75h-1.5a8.25 8.25 0 0 0 8.25 8.25v-1.5ZM3.75 10.5a6.75 6.75 0 0 1 6.75-6.75v-1.5a8.25 8.25 0 0 0-8.25 8.25h1.5Zm6.75-6.75a6.75 6.75 0 0 1 6.75 6.75h1.5a8.25 8.25 0 0 0-8.25-8.25v1.5Zm11.03 16.72-5.196-5.197-1.061 1.06 5.197 5.197 1.06-1.06Zm-4.28-9.97c0 1.864-.755 3.55-1.977 4.773l1.06 1.06A8.226 8.226 0 0 0 18.75 10.5h-1.5Zm-1.977 4.773A6.727 6.727 0 0 1 10.5 17.25v1.5a8.226 8.226 0 0 0 5.834-2.416l-1.061-1.061Z">
+                        </path>
+                    </svg>
+                </div>
+            </form>
+
             <div class="mt-6 flow-root">
                 <div class="-my-6 divide-y divide-gray-500/10">
                     <div class="space-y-2 py-6">
@@ -150,16 +204,55 @@
                     <div class="py-6">
                         @if((_accountService.currentUser$ | async)){
                         <a routerLink="/login"
-                            class="text-sm font-mediumleading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50">
-                            <span aria-hidden="true">&larr;</span>
+                            class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex align-middle w-full text-center justify-center items-center">
+                            <span aria-hidden="true">&larr;</span>&nbsp;
                             Log out
                         </a>
                         }
                         @else {
                         <a routerLink="/login"
-                            class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50">Log
-                            in <span aria-hidden="true">&rarr;</span></a>
+                            class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex align-middle w-full text-center justify-center items-center">Log
+                            in&nbsp;<span aria-hidden="true">&rarr;</span></a>
                         }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Mini shopping cart. -->
+    <div class="" role="dialog" aria-modal="true" [style]="showMiniCart ? '' : 'display: none'">
+        <!-- Background backdrop, show/hide based on slide-over state. -->
+        <div class="fixed inset-0 z-10"></div>
+        <div
+            class="fixed inset-y-0 right-0 z-10 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10 transition-transform">
+            <div class="flex items-center justify-between">
+                <a href="#" class="-m-1.5 p-1.5">
+                    <h4 class="font-medium">Mini shopping cart</h4>
+                </a>
+                <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700"
+                    (click)="showMiniCart = !showMiniCart">
+                    <span class="sr-only">Close menu</span>
+                    <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                        aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                </button>
+            </div>
+            <div class="mt-6 flow-root">
+                <div class="-my-6 divide-y divide-gray-500/10">
+                    <div class="space-y-2 py-6 h-[80dvh] overflow-y-auto overflow-x-hidden">
+                        <h1>Items in cart will be shown here </h1>
+                    </div>
+                    <div class="py-6 w-100">
+                        <button
+                            class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex align-middle w-full text-center justify-center items-center">Got
+                            to cart&nbsp;
+                            <svg height="16" width="18" viewBox="0 0 576 512">
+                                <path fill="currentColor"
+                                    d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </div>
