--- a/Client/src/app/modules/admin/components/customers/list-customers/list-customers.component.html
+++ b/Client/src/app/modules/admin/components/customers/list-customers/list-customers.component.html
@@ -1,1 +1,221 @@
 <h3 class="font-medium text-2xl">Customer Lists</h3>
+
+<div *ngIf="showModal" class="fixed top-0 left-0 right-0 bottom-0 bg-black opacity-50 z-50"></div>
+
+<div class="flex items-center justify-between flex-column md:flex-row flex-wrap space-y-4 md:space-y-0 py-4">
+    <div>
+        <button id="dropdownActionButton" data-dropdown-toggle="dropdownAction"
+            class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-3 py-1.5 "
+            type="button">
+            <span class="sr-only">Action button</span>
+            Action
+            <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 10 6">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="m1 1 4 4 4-4" />
+            </svg>
+        </button>
+        <!-- Dropdown menu -->
+        <div id="dropdownAction" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
+            <ul class="py-1 text-sm text-gray-700 " aria-labelledby="dropdownActionButton">
+                <li>
+                    <a href="#" class="block px-4 py-2 hover:bg-gray-100">Reward</a>
+                </li>
+                <li>
+                    <a href="#" class="block px-4 py-2 hover:bg-gray-100">Promote</a>
+                </li>
+                <li>
+                    <a href="#" class="block px-4 py-2 hover:bg-gray-100">Activate account</a>
+                </li>
+            </ul>
+            <div class="py-1">
+                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 ">Delete User</a>
+            </div>
+        </div>
+    </div>
+    <label for="table-search" class="sr-only">Search</label>
+    <div class="relative">
+        <input #searchByUsername type="text" id="table-search-users"
+            class="block pt-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg lg:w-80 bg-gray-50 focus:outline-none py-2"
+            placeholder="Search by username" value="" (keyup.enter)="searchCustomer(searchByUsername.value)" />            
+        <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+            <svg class="w-4 h-4 text-gray-500 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 20 20">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+            </svg>
+        </div>
+    </div>
+</div>
+
+
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 ">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+            <tr>
+                <th scope="col" class="p-4">
+                    <div class="flex items-center">
+                        <input id="checkbox-all-search" type="checkbox"
+                            class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500  focus:ring-2">
+                        <label for="checkbox-all-search" class="sr-only">checkbox</label>
+                    </div>
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Username
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Email
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Customer Role
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Status
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @for((customer of customers$ | async); track customer){
+            <tr class="bg-white border-b hover:bg-gray-50 ">
+                <td class="w-4 p-4">
+                    <div class="flex items-center">
+                        <input id="checkbox-table-search-1" type="checkbox"
+                            class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500  focus:ring-2">
+                        <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                    </div>
+                </td>
+                <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap ">
+                    <div class="ps-3">
+                        <div class="text-base font-semibold">{{customer.username}}</div>
+                    </div>
+                </th>
+                <td class="px-6 py-4">
+                    {{customer.email}}
+                </td>
+                <td class="px-6 py-4">
+                </td>
+                <td class="px-6 py-4">
+                    @if(customer.active){
+                    <div class="flex items-center">
+                        <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div> Active
+                    </div>
+                    }
+                    @else {
+                    <div class="flex items-center">
+                        <div class="h-2.5 w-2.5 rounded-full bg-red-500 me-2"></div> Inactive
+                    </div>
+                    }
+                </td>
+                <td class="px-4 py-4">
+                    <!-- Modal toggle -->
+                    <a type="button" data-modal-target="editUserModal" data-modal-show="editUserModal"
+                        class="font-medium text-indigo-600 hover:bg-indigo-100 hover:rounded-md cursor-pointer p-2"
+                        (click)="editCustomerModal(customer.id)">Edit
+                        user</a>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+    <!-- Edit user modal -->
+    <div id="editUserModal" tabindex="-1" [class]="(showModal) ? '' : 'hidden'"
+        class="fixed top-0 left-0 right-0 z-50 items-center justify-center w-full p-4 md:translate-x-12 lg:translate-x-1/4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100% - 1rem)] max-h-full">
+        <div class="relative w-full max-w-2xl max-h-full">
+            <!-- Modal content -->
+            <form class="relative bg-white rounded-lg shadow ">
+                <!-- Modal header -->
+                <div class="flex items-start justify-between p-4 border-b rounded-t ">
+                    <h3 class="text-xl font-semibold text-gray-900 ">
+                        Edit {{this.selectedUser?.username}}
+                    </h3>
+                    <button type="button"
+                        class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+                        (click)="showModal = false">
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
+                </div>
+                <!-- Modal body -->
+                <div class="p-6 space-y-6">
+                    <div class="grid grid-cols-6 gap-6">
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="first-name" class="block mb-2 text-sm font-medium text-gray-900 ">First
+                                Name</label>
+                            <input type="text" name="first-name" id="first-name"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="Green" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="last-name" class="block mb-2 text-sm font-medium text-gray-900 ">Last
+                                Name</label>
+                            <input type="text" name="last-name" id="last-name"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="Green" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="username" class="block mb-2 text-sm font-medium text-gray-900 ">Username</label>
+                            <input type="text" name="username" id="username"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="Bonnie" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
+                            <input type="email" name="email" id="email"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="example@company.com" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="phone-number" class="block mb-2 text-sm font-medium text-gray-900 ">Phone
+                                Number</label>
+                            <input type="number" name="phone-number" id="phone-number"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="e.g. +(12)3456 789" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="department"
+                                class="block mb-2 text-sm font-medium text-gray-900 ">Department</label>
+                            <input type="text" name="department" id="department"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="Development" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="company" class="block mb-2 text-sm font-medium text-gray-900 ">Company</label>
+                            <input type="number" name="company" id="company"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="123456" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="current-password" class="block mb-2 text-sm font-medium text-gray-900 ">Current
+                                Password</label>
+                            <input type="password" name="current-password" id="current-password"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="••••••••" required="">
+                        </div>
+                        <div class="col-span-6 sm:col-span-3">
+                            <label for="new-password" class="block mb-2 text-sm font-medium text-gray-900 ">New
+                                Password</label>
+                            <input type="password" name="new-password" id="new-password"
+                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:outline-none block w-full p-2.5 "
+                                placeholder="••••••••" required="">
+                        </div>
+                    </div>
+                </div>
+                <!-- Modal footer -->
+                <div class="flex items-center p-6 space-x-3 border-t border-gray-200 rounded-b ">
+                    <button type="submit"
+                        class="text-white bg-indigo-700 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center ">
+                        <fa-icon [icon]="faSave" class="mr-1"></fa-icon>
+                        Save all
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
